--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint --ext .js,.vue src",
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "test:ci": "npm run lint && npm run test:unit",
-    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
+    "svg": "vsvg -s src/svg-icons -t src/icons/js"
   },
   "dependencies": {
     "axios": "0.18.0",
@@ -24,6 +25,7 @@
     "qs": "^6.7.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
+    "vue-svgicon": "^3.2.6",
     "vuex": "3.1.0"
   },
   "devDependencies": {
